changes in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -21,7 +21,7 @@
       },
       {
         "src": "/(.*)",
-        "dest": "poll/wsgi.py"
+        "dest": "youtubemp3/wsgi.py"
       }
     ]
   }
